--- a/movieapp/templates/movieapp/favourite_list.html
+++ b/movieapp/templates/movieapp/favourite_list.html
@@ -5,35 +5,33 @@
 <div style="width:100%;height:80px">
 </div>
 <div class="container-fluid">
-    {% if movie_lists %}
-        {% for movie in movie_lists %}
-        {% if movie.imdbID%}
+    {% if fav_lists %}
+        {% for movie in fav_lists %}
         {% if forloop.counter|divisibleby:'3' or forloop.counter == 1 %}
         <div class="row">
-        {% endif %}
-      <div class="col-sm-6 col-md-4">
+            {% endif %}
+      <div class="col-sm-6 col-md-4" id="frame_{{ movie.Imdbid }}">
         <div class="thumbnail">
-            <a href="{% url 'movies-detail' %}?id={{ movie.imdbID }}">
-              {% ifnotequal movie.Poster 'N/A' %}
-               <img src="{{ movie.Poster }}" class="img-responsive" style="max-height:440px" alt="no poster available">
+            <a href="{% url 'movies-detail' %}?id={{ movie.Imdbid }}">
+                {% ifnotequal movie.Poster 'N/A' %}
+               <img src="{{ movie.Poster }}" class="img-responsive" style="max-height:440px">
                {% else %}
-               <img src="/static/movieapp/img/no-poster.jpg" class="img-responsive" style="max-height:440px">
+               <img src="{% static 'movieapp/img/no-poster.jpg' %}" class="img-responsive" style="max-height:440px">
                {% endifnotequal %}
            </a>
           <div class="caption">
               <h3>{{ movie.Title }}</h3>
               <h4>{{ movie.Year }}</h4>
             <p>
-                <a href="{% url 'movies-detail' %}?id={{ movie.imdbID }}" class="btn btn-primary btn-sm" role="button">View Details</a>
+                <a href="{% url 'movies-detail' %}?id={{ movie.Imdbid }}" class="btn btn-primary btn-sm" role="button">View Details</a>
                 <a href=" #" class="btn btn-default btn-sm favourite" role="button" onclick="save_fav({{ movie }})">
-                <span class="glyphicon glyphicon-heart" id = "fav_{{ movie.imdbID }}" ></span></a>
+                <span class="glyphicon glyphicon-heart" id = "fav_{{ movie.Imdbid }}" ></span></a>
             </p>
           </div>
         </div>
       </div>
         {% if forloop.counter|divisibleby:'3' %}
         </div>
-        {% endif %}
         {% endif %}
         {% endfor %}
        {% endif %}
