--- a/movieapp/templates/movieapp/favourite_list.html
+++ b/movieapp/templates/movieapp/favourite_list.html
@@ -25,7 +25,7 @@
             <p>
                 <a href="{% url 'movies-detail' %}?id={{ movie.Imdbid }}" class="btn btn-primary btn-sm" role="button">View Details</a>
                 <a href=" #" class="btn btn-default btn-sm favourite" role="button" onclick="save_fav({{ movie }})">
-                <span class="glyphicon glyphicon-heart" id = "fav_{{ movie.Imdbid }}" ></span></a>
+                <span class="glyphicon glyphicon-heart" style="color:red;" id = "fav_{{ movie.Imdbid }}" ></span></a>
             </p>
           </div>
         </div>
