final changes, added authentcation

--- a/movieapp/templates/movieapp/favourite_list.html
+++ b/movieapp/templates/movieapp/favourite_list.html
@@ -3,6 +3,9 @@
 {% block title %}Movie Potrtal{% endblock %}
 {% block body %}
 <div style="width:100%;height:80px">
+    <div class="page-header">
+        <h1>Favourite Movies</h1>
+    </div>
 </div>
 <div class="container-fluid">
     {% if fav_lists %}
