--- a/movieapp/templates/movieapp/details.html
+++ b/movieapp/templates/movieapp/details.html
@@ -2,17 +2,22 @@
 {% load static %}
 {% block title %}{{ movie.title }}{% endblock %}
 {% block body %}
+<div style="width:100%;height:80px">
+    <div class="page-header">
+        <h1>Movie Details</h1>
+    </div>
+</div>
 {% if movie_details %}
 {% for movie in movie_details %}
 <div class="container-fluid songs-container">
     <div class="media">
       <div class="media-left">
         <a href="#">
-            {% if movie.poster_url %}
-                <img class="media-object" src="{{ movie.poster_url }}" alt="...">
+            {% ifnotequal movie.poster_url 'N/A' %}
+                <img class="media-object" src="{{ movie.poster_url }}" alt="no poster available">
             {% else %}
-            <img class="media-object" src="/static/img/no-img.jpg alt="...">
-            {% endif %}
+                <img src="/static/movieapp/img/no-poster.jpg" class="img-responsive" style="max-height:440px">
+            {% endifnotequal %}
         </a>
       </div>
       <div class="media-body">
